(melange.emit
 (target output)
 (alias react)
 (libraries melange reason-react shared_js world)
 (modules :standard \ hello)
 (preprocess
  (pps reactjs-jsx-ppx))
 (module_systems es6))

(melange.emit
 (target node)
 (alias node)
 (libraries shared_js world)
 (modules hello)
 (module_systems commonjs))
